crates/sui-graphql-macros/tests/compile/schema_validation_field_not_found.stderr
error: Field 'nonExistentField' not found on type 'Object' in path 'object.nonExistentField'
 --> tests/compile/schema_validation_field_not_found.rs:6:5
  |
6 |     address: String,
  |     ^^^^^^^
