crates/sui-graphql-macros/tests/compile/schema_validation_field_not_found.rs
use sui_graphql_macros::QueryResponse;

#[derive(QueryResponse)]
struct InvalidField {
    #[field(path = "object.nonExistent")]
    address: String,
}

fn main() {}
